--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "4",
     "axios": "^1.8.4",
+    "gojs": "^3.0.20",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
